# wcad

./: CMakeLists.txt  CMakePresets.json
demo/: main.cpp
src/: Canvas.cpp  Canvas.h  Editor.cpp  Editor.h  main.cpp
